src/main/resources/devops/k8s_aws/istio/gateway/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:
  name: istio-ingress-firewall-yoogesh
  
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
    
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - fleetman.com
