src/main/resources/devops/k8s_aws/istio/gateway/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"


---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-ingress-virtual-service-configuration
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: twm-webapp.default.svc.cluster.local
            subset: safe
          weight: 90
        - destination:
            host: twm-webapp.default.svc.cluster.local
            subset: risky
          weight: 10
          
          
---

kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: twm-webapp-istio-canery-destination-configuration
  namespace: default
spec:
  host: twm-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: safe
      name: safe
    - labels:
        version: risky
      name: risky
