src/main/resources/devops/k8s_aws/istio/gateway/istio-route-monitoring.yaml
apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: istio-ingress-virtual-service-monitor-configuration-prometheus
  
spec:
  hosts:
    - prometheus.fleetman.com
  gateways:
    - istio-ingress-firewall-yoogesh
    
  http:
  
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: prometheus.istio-system.svc.cluster.local
          port:
            number: 9090

---

apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: istio-ingress-virtual-service-monitor-configuration-grafana
  
spec:
  hosts:
    - grafana.fleetman.com
  gateways:
    - istio-ingress-firewall-yoogesh
    
  http:
  
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: grafana.istio-system.svc.cluster.local
          port:
            number: 3000

---

apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: istio-ingress-virtual-service-monitor-configuration-kiali
  
spec:
  hosts:
    - kiali.fleetman.com
  gateways:
    - istio-ingress-firewall-yoogesh
    
  http:
  
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: kiali.istio-system.svc.cluster.local
          port:
            number: 20001

---

apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: istio-ingress-virtual-service-monitor-configuration-jaeger
  
spec:
  hosts:
    - jaeger.fleetman.com
  gateways:
    - istio-ingress-firewall-yoogesh
    
  http:
  
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: jaeger-query.istio-system.svc.cluster.local
          port:
            number: 16686
            
---

apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:
  name: istio-ingress-virtual-service-monitor-configuration-kibana
  
spec:
  hosts:
    - kibana.fleetman.com
  gateways:
    - istio-ingress-firewall-yoogesh
    
  http:
  
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: kibana-logging.kube-system.svc.cluster.local
          port:
            number: 5601
